# FAQ-Chatbot

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  start.sh
backend/: pyproject.toml
backend/data/: faqs.json
backend/src/: api.py  app_cli.py  chatbot.py  data_loader.py  nltk_setup.py  preprocessing.py  vectorizer.py
frontend/: components.json  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CommandBar.tsx  ConfidenceMeter.tsx  EmptyState.tsx  FaqBrowser.tsx  MessageCard.tsx  NavLink.tsx  Sidebar.tsx  ThinkingIndicator.tsx
frontend/src/components/ui/: calendar.tsx  chart.tsx
frontend/src/hooks/: use-toast.ts  useChat.ts
src/: app_cli.py  chatbot.py  nltk_setup.py  preprocessing.py  similarity.py  vectorizer.py
tests/: test_data_loader.py  test_preprocessing.py
