[project]
name = "knowledge-assistant"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "nltk>=3.9.2",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
setup-nltk = "src.nltk_setup:ensure_nltk_resources"
